--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "build:prod": "tsc -b && BUILD_MODE=prod vite build",
+    "build": "vite build",
+    "build:prod": "BUILD_MODE=prod vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "install-deps": "npm install",
