--- a/free-marketplace/package.json
+++ b/free-marketplace/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "pnpm run dev",
+    "build": "pnpm run build:vercel",
+    "build:vercel": "vite build",
     "build:prod": "BUILD_MODE=prod vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "install-deps": "npm install",
-    "clean": "rm -rf node_modules package-lock.json"
+    "install-deps": "pnpm install --prefer-offline",
+    "clean": "rm -rf node_modules .pnpm-store pnpm-lock.yaml && pnpm store prune"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
